--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,19 +1,28 @@
 {
   "env": {
+    "commonjs": true,
     "es6": true,
     "node": true
   },
   "extends": [
-    "standard"
+    "airbnb-base",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
   ],
   "globals": {
+    "use": "readonly",
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly",
-    "use": true
+    "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "ecmaVersion": 2018
   },
-  "rules": {}
+  "rules": {
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off",
+    "consistent-return": "off",
+    "no-param-reassign": "off"
+  }
 }
