--- a/api/package.json
+++ b/api/package.json
@@ -24,14 +24,20 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^3.0.10",
     "@adonisjs/vow": "^1.0.17",
-    "mysql": "^2.17.1"
+    "date-fns": "^2.8.1",
+    "mysql": "^2.17.1",
+    "prettier": "^1.19.1"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "sqlite3": "^4.1.1"
